# cc-stm32-f1-f4-cmake-unity

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  VERSION.in  env.template.json
{{cookiecutter.project_name}}/cmake/: stm32_utils.cmake
{{cookiecutter.project_name}}/docs/: CMakeLists.txt  Doxyfile
{{cookiecutter.project_name}}/examples/: CMakeLists.txt
{{cookiecutter.project_name}}/examples/src/: {{cookiecutter.project_name}}.c
{{cookiecutter.project_name}}/platform/: CMakeLists.txt
{{cookiecutter.project_name}}/platform/common/inc/: platform.h
{{cookiecutter.project_name}}/platform/linux/cmake/: gcc-gnu.cmake
{{cookiecutter.project_name}}/platform/linux/drivers/{{cookiecutter.project_name}}/: {{cookiecutter.project_name}}.c
{{cookiecutter.project_name}}/platform/stm32f103xx/: CMakeLists.txt
{{cookiecutter.project_name}}/platform/stm32f103xx/cmake/: gcc-arm-none-eabi.cmake
{{cookiecutter.project_name}}/platform/stm32f103xx/cmake/stm32cubemx/: CMakeLists.txt
{{cookiecutter.project_name}}/platform/stm32f103xx/cubemx/Core/Src/: gpio.c  usart.c
{{cookiecutter.project_name}}/platform/stm32f103xx/drivers/platform/: platform.c
{{cookiecutter.project_name}}/platform/stm32f103xx/drivers/{{cookiecutter.project_name}}/: {{cookiecutter.project_name}}.c
{{cookiecutter.project_name}}/platform/stm32f103xx/linkerscript/: STM32F103XX_FLASH.ld
{{cookiecutter.project_name}}/platform/stm32f401xx/cmake/: gcc-arm-none-eabi.cmake
{{cookiecutter.project_name}}/platform/stm32f401xx/cmake/stm32cubemx/: CMakeLists.txt
{{cookiecutter.project_name}}/platform/stm32f401xx/cubemx/Core/Src/: gpio.c  main.c  usart.c
{{cookiecutter.project_name}}/platform/stm32f401xx/cubemx/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f401xe.h
{{cookiecutter.project_name}}/platform/stm32f401xx/cubemx/startup/: startup_stm32f401xe.s
{{cookiecutter.project_name}}/platform/stm32f401xx/drivers/platform/: platform.c
{{cookiecutter.project_name}}/platform/stm32f401xx/drivers/{{cookiecutter.project_name}}/: {{cookiecutter.project_name}}.c
{{cookiecutter.project_name}}/platform/stm32f401xx/linkerscript/: STM32F401XX_FLASH.ld
{{cookiecutter.project_name}}/platform/windows/: CmakeLists.txt
{{cookiecutter.project_name}}/platform/windows/cmake/: gcc-mingw32.cmake
{{cookiecutter.project_name}}/platform/windows/drivers/platform/: platform.c
{{cookiecutter.project_name}}/platform/windows/drivers/{{cookiecutter.project_name}}/: {{cookiecutter.project_name}}.c
{{cookiecutter.project_name}}/test/: CMakeLists.txt
{{cookiecutter.project_name}}/test/src/: main.c  test_{{cookiecutter.project_name}}.c
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: CMakeLists.txt
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/inc/: {{cookiecutter.project_name}}.h  {{cookiecutter.project_name}}_common.h  {{cookiecutter.project_name}}_interface.h
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/src/: {{cookiecutter.project_name}}.c
